# zari-devmart-web9

./: .gitignore  README.md  auth.py  database.py  main.py  products.json  pyproject.toml  requirements.txt  users.json  utils.py
models/: cart.py  payment.py  product.py  user.py
